--- a/OrderFood_SW/Views/Users/Delete.cshtml
+++ b/OrderFood_SW/Views/Users/Delete.cshtml
@@ -26,6 +26,9 @@
                             <dt>@Html.DisplayNameFor(model => model.FullName)</dt>
                             <dd>@Html.DisplayFor(model => model.FullName)</dd>
 
+                            <dt>@Html.DisplayNameFor(model => model.Email)</dt>
+                            <dd>@Html.DisplayFor(model => model.Email)</dd>
+
                             <dt>@Html.DisplayNameFor(model => model.Role)</dt>
                             <dd>@Html.DisplayFor(model => model.Role)</dd>
 
