--- a/OrderFood_SW/Views/Users/Index.cshtml
+++ b/OrderFood_SW/Views/Users/Index.cshtml
@@ -30,6 +30,7 @@
                         <th>User Name</th>
                         <th>Password Hash</th>
                         <th>Full Name</th>
+                        <th>Email</th>
                         <th>Role</th>
                         <th>Is Avtive ?</th>
                         <th style="width:95px"></th>
@@ -43,6 +44,7 @@
                             <td>@table.Username</td>
                             <td>@table.PasswordHash</td>
                             <td>@table.FullName</td>
+                            <td>@table.Email</td>
                             <td>@table.Role</td>
                             <td>@table.IsActive</td>
                             <td>
