--- a/OrderFood_SW/Views/CustomerOrder/Index.cshtml
+++ b/OrderFood_SW/Views/CustomerOrder/Index.cshtml
@@ -1,15 +1,96 @@
 ﻿@{
     Layout = "_CustomerLayout";
 }
+<link rel="stylesheet" href="~/css/customer-style/customer-table-select.css" asp-append-version="true">
 
-<a style="text-align:center; margin-top: 200px" href="~/CustomerOrder/CreateOrder?tableId=1">QR 1</a>
+<div class="bg-animation">
+    <div class="particle" style="top: 10%; left: 10%; width: 20px; height: 20px; animation-delay: 0s;"></div>
+    <div class="particle" style="top: 20%; left: 80%; width: 15px; height: 15px; animation-delay: 1s;"></div>
+    <div class="particle" style="top: 80%; left: 20%; width: 25px; height: 25px; animation-delay: 2s;"></div>
+    <div class="particle" style="top: 60%; left: 70%; width: 18px; height: 18px; animation-delay: 3s;"></div>
+</div>
 
-<a style="text-align:center; margin-top: 10px" href="~/CustomerOrder/CreateOrder?tableId=2">QR 2</a>
+<div class="container">
+    <div class="header">
+        <h1><i class="fas fa-utensils"></i> Select Your Table</h1>
+        <p>Choose your preferred seating and start your dining experience</p>
+    </div>
 
-<a style="text-align:center; margin-top: 10px" href="~/CustomerOrder/CreateOrder?tableId=3">QR 3</a>
+    <div class="tables-grid">
+        <a href="~/CustomerOrder/CreateOrder?tableId=1" class="table-card">
+            <div class="table-icon">
+                <i class="fas fa-chair"></i>
+            </div>
+            <div class="table-number">Table 1</div>
+            <div class="table-status">Available</div>
+            <div class="qr-code">
+                <i class="fas fa-qrcode"></i>
+            </div>
+            <div class="scan-text">Tap to order</div>
+        </a>
 
-<a style="text-align:center; margin-top: 10px" href="~/CustomerOrder/CreateOrder?tableId=4">QR 4</a>
+        <a href="~/CustomerOrder/CreateOrder?tableId=2" class="table-card">
+            <div class="table-icon">
+                <i class="fas fa-chair"></i>
+            </div>
+            <div class="table-number">Table 2</div>
+            <div class="table-status">Available</div>
+            <div class="qr-code">
+                <i class="fas fa-qrcode"></i>
+            </div>
+            <div class="scan-text">Tap to order</div>
+        </a>
 
-<a style="text-align:center; margin-top: 10px" href="~/CustomerOrder/CreateOrder?tableId=5">QR 5</a>
+        <a href="~/CustomerOrder/CreateOrder?tableId=3" class="table-card">
+            <div class="table-icon">
+                <i class="fas fa-chair"></i>
+            </div>
+            <div class="table-number">Table 3</div>
+            <div class="table-status">Available</div>
+            <div class="qr-code">
+                <i class="fas fa-qrcode"></i>
+            </div>
+            <div class="scan-text">Tap to order</div>
+        </a>
 
-<a style="text-align:center; margin-top: 10px" href="~/CustomerOrder/CreateOrder?tableId=6">QR 6</a>
+        <a href="~/CustomerOrder/CreateOrder?tableId=4" class="table-card">
+            <div class="table-icon">
+                <i class="fas fa-chair"></i>
+            </div>
+            <div class="table-number">Table 4</div>
+            <div class="table-status">Available</div>
+            <div class="qr-code">
+                <i class="fas fa-qrcode"></i>
+            </div>
+            <div class="scan-text">Tap to order</div>
+        </a>
+
+        <a href="~/CustomerOrder/CreateOrder?tableId=5" class="table-card">
+            <div class="table-icon">
+                <i class="fas fa-chair"></i>
+            </div>
+            <div class="table-number">Table 5</div>
+            <div class="table-status">Available</div>
+            <div class="qr-code">
+                <i class="fas fa-qrcode"></i>
+            </div>
+            <div class="scan-text">Tap to order</div>
+        </a>
+
+        <a href="~/CustomerOrder/CreateOrder?tableId=6" class="table-card">
+            <div class="table-icon">
+                <i class="fas fa-chair"></i>
+            </div>
+            <div class="table-number">Table 6</div>
+            <div class="table-status">Available</div>
+            <div class="qr-code">
+                <i class="fas fa-qrcode"></i>
+            </div>
+            <div class="scan-text">Tap to order</div>
+        </a>
+    </div>
+
+    <div class="footer-text">
+        <p><i class="fas fa-mobile-alt"></i> Simply tap on your table to begin ordering</p>
+    </div>
+</div>
