--- a/OrderFood_SW/Views/Users/Create.cshtml
+++ b/OrderFood_SW/Views/Users/Create.cshtml
@@ -41,6 +41,14 @@
                             </div>
 
                             <div class="form-group">
+                                <label asp-for="Email" class="col-sm-3 control-label"></label>
+                                <div class="col-sm-9">
+                                    <input asp-for="Email" class="form-control" />
+                                    <span asp-validation-for="Email" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
                                 <label asp-for="Role" class="col-sm-3 control-label"></label>
                                 <div class="col-sm-9">
                                     <input asp-for="Role" class="form-control" />
