--- a/OrderFood_SW/Views/Customer/OrderHistory.cshtml
+++ b/OrderFood_SW/Views/Customer/OrderHistory.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<OrderFood_SW.ViewModels.OrderHistoryViewModel>
 @{
     Layout = "_CustomerLayout";
+    var tableId = Context.Session.GetString("TableId");
 }
 
 <link rel="stylesheet" href="~/css/customer-style/customer-history.css" asp-append-version="true">
@@ -84,18 +85,34 @@
                     @if (item.OrderStatus.Equals("2"))
                     {
                         <div class="order-actions">
-                            <button class="action-btn btn-secondary">Xem chi tiết</button>
-                            <button class="action-btn btn-primary">Đặt lại</button>
+                            <a asp-action="OrderDetails" asp-controller="Customer" asp-route-orderId="@item.OrderId" class="action-btn btn-secondary">
+                                See more details
+                            </a>
+                            <form method="post" asp-action="ReOrder" asp-controller="Customer">
+                                <input type="hidden" name="orderId" value="@item.OrderId" />
+                                <input type="hidden" name="tableId" value="@tableId" />
+                                <button class="action-btn btn-primary">Re-Order</button>
+                            </form>
                         </div>
                     }
                     else if (item.OrderStatus.Equals("1"))
                     {
                         <div class="order-actions">
-                            <form method="post" asp-action="CustomerCancelOrder" asp-controller="Customer">
+                            <a asp-action="OrderDetails" asp-controller="Customer" asp-route-orderId="@item.OrderId" class="action-btn btn-secondary">
+                                See more details
+                            </a>
+                            <form method="post" asp-action="CancelOrder" asp-controller="Customer">
                                 <input type="hidden" name="orderId" value="@item.OrderId" />
                                 <button type="submit" class="action-btn btn-secondary">Cancel</button>
                             </form>
-                            <button class="action-btn btn-primary">Theo dõi</button>
+                        </div>
+                    }
+                    else if (item.OrderStatus.Equals("-1"))
+                    {
+                        <div class="order-actions">
+                            <a asp-action="OrderDetails" asp-controller="Customer" asp-route-orderId="@item.OrderId" class="action-btn btn-secondary">
+                                See more details
+                            </a>
                         </div>
                     }
                 </div>
