--- a/OrderFood_SW/Views/CustomerCart/Index.cshtml
+++ b/OrderFood_SW/Views/CustomerCart/Index.cshtml
@@ -16,7 +16,7 @@
 
 <div class="container">
     <div class="header" style="border-radius: 20px;">
-        <h1><i class="fas fa-shopping-cart"></i> Your Order At Table #@ViewBag.TableId</h1>
+        <h1><i class="fas fa-shopping-cart"></i> Your Order At Table #@ViewBag.tableNumber</h1>
         <p>Review your delicious selections</p>
     </div>
 
